# manifoldhyper

./: Cargo.toml
src/: hypergraph.rs  library.rs  main.rs
src/api/: error.rs  models.rs  server.rs
src/commands/: mod.rs
