[package]
name = "mhg-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
mhg = { path = "../mhg" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
