[package]
name = "mhg-cli"
version = "0.1.0"
edition = "2024"
description = "CLI and API server for the Manifold Hypergraph library."
license = "MIT"

[dependencies]
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
